# Direct-Ethernet-Transport

./: LICENSE-DET-Driver.txt  LICENSE-DET-Library.txt  Makefile  Makefile.am  Makefile.in  README.md  ReleaseNotes.txt  config.h  config.status  configure  configure.in  det.spec  det.spec.in  libtool
examples/: Makefile  README.txt  det_perf  det_perf.c
kernel/: .det_main.o.d  Makefile  Makefile.am  Makefile.in  Makefile~  det.h  det_co.c  det_cq.c  det_datapath.c  det_debug.h  det_driver.h  det_event.c  det_ioctl.c  det_ioctl32.c  det_ioctl32.h  det_loopback.c  det_main.c  det_memops.c  det_memops.h  det_mr.c  det_mw.c  det_nic.c  det_pd.c  det_perf.h  det_procfs.c  det_protocol.c  det_protocol.h  det_qp.c  det_types.h  det_types32.h  det_verbs.h
usr/: Makefile  Makefile.am  Makefile.in  det  det.h  det_ioctl.h  det_verbs.c  libdet.map
usr/man/: det_allgather.3  det_allgatherv.3  det_alloc_pd.3  det_alltoall.3  det_alltoallv.3  det_arm_cq.3  det_barrier.3  det_bcast.3  det_bind.3  det_close.3  det_close_nic.3  det_comp_exch.3  det_create_co.3  det_create_cq.3  det_create_event.3  det_create_mw.3  det_create_qp.3  det_dealloc_pd.3  det_dereg_mr.3  det_destroy_co.3  det_destroy_cq.3  det_destroy_event.3  det_destroy_mw.3  det_destroy_qp.3  det_event_cb.3  det_fetch_add.3  det_gather.3  det_gatherv.3  det_generate_event.3  det_join.3  det_modify_mr.3  det_modify_qp.3  det_open.3  det_open_nic.3  det_poll_cq.3  det_query.3  det_query_cq.3  det_query_mr.3  det_query_mw.3  det_query_nic.3  (+11 more)
