dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(det, 1.1.0, roy.k.larsen@intel.com)
AC_CONFIG_SRCDIR([kernel/det_main.c])
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(det, 1.1.0)

AM_PROG_LIBTOOL

dnl Checks for programs
AC_PROG_CC

AC_CACHE_CHECK(whether ld accepts --version-script, ac_cv_version_script,
    if test -n "`$LD --help < /dev/null 2>/dev/null | grep version-script`"; then
        ac_cv_version_script=yes
    else
        ac_cv_version_script=no
    fi)
AM_CONDITIONAL(HAVE_LD_VERSION_SCRIPT, test "$ac_cv_version_script" = "yes")

dnl Check for bitops support.  If it's not there, we'll assume intrinsic atomic ops
AC_CACHE_CHECK(Check for bitops support, ac_cv_have_bitops,
    if test -f /usr/include/asm/bitops.h ; then
        ac_cv_have_bitops=yes
    else
	ac_cv_have_bitops=no
    fi)
AM_CONDITIONAL(HAVE_BITOPS, test "$ac_cv_have_bitops" = "yes")

AC_CONFIG_FILES([Makefile kernel/Makefile usr/Makefile det.spec])

AC_OUTPUT
